Got a basic version of the icon animation to work with Tyler's help. Need to add a animation queue system to prevent icon overlap and not appearing when hovering off and on buttons too quickly.

--- a/portfolio/styles.css
+++ b/portfolio/styles.css
@@ -140,56 +140,71 @@ main {
   justify-self: center;
 }
 
-.center-art-container {
-  position: relative;
+@keyframes slide-in {
+  from {
+    transform: translate(-30px, -30px);
+    opacity: 0;
+  }
+  to {
+    transform: translate(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    transform: translate(0);
+    opacity: 1;
+  }
+  to {
+    transform: translate(30px, 30px);
+    opacity: 0;
+  }
+}
+
+.center-art {
   height: 40vw;
   width: 40vw;
   margin: auto;
   grid-area: code-holder;
   justify-self: center;
   align-self: center;
-}
-
-@keyframes slide-in {
-  from {
-    transform: translateY(-20%);
-    opacity: 0;
-  }
-  to {
-    transform: translateY(0);
-    opacity: 1;
-  }
-}
-
-.center-art {
-  --animation-duration: 300ms;
-  position: absolute;
-  inset: 0;
-  opacity: 0;
-  transform: translate(-30px, -30px);
-  transition-duration: var(--animation-duration);
-  transition-property: opacity, transform;
-  transition-timing-function: ease-in-out;
-  width: 100%;
-  height: 100%;
+  background-image: url(../images/Holder3.png);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
+  position: reletive;
 }
 
-.center-art.active {
-  opacity: 1;
-  transform: translateY(0);
+.preview-icon {
+  --animation-duration: 300ms;
+  visibility: hidden;
+  position: absolute;
+  justify-self: center;
+  align-self: center;
+  inset: 0;
+  top: 1vw;
+  left: 1vw;
+  opacity: 0;
+  animation-duration: calc(var(--animation-duration) * 1ms);
+  animation-direction: forwards;
+  animation-timing-function: ease-in-out;
+  width: 10vw;
+  height: 10vw;
 }
 
-.center-art.fading-in {
+.preview-icon.active {
+  visibility: visible;
   opacity: 1;
-  transform: translate(30px, 30px);
+  transform: none;
 }
 
-.center-art.fading-out {
-  opacity: 1;
-  transform: translate(-30px, -30px);
+.preview-icon.fading-in {
+  animation-name: slide-in;
+}
+
+.preview-icon.fading-out {
+  animation-name: slide-out;
 }
 
 .footer {
